# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "aheui",
    "rpaheui",
]

[workspace.package]
authors = ["Jeong, YunWon"]
version = "0.0.1"
edition = "2021"
rust-version = "1.67.1"
description = "Aheui interpreter in Rust."
repository = "https://github.com/aheui/aheui-rust"
license = "AGPL-3.0"
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]

[workspace.dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
malachite-bigint = "0.2.0"
num-traits = "0.2.18"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
rustpython-vm = "0.3.1"
rustpython-pylib = "0.3.1"
rustpython-derive = "0.3.1"
