[package]
name = "aheui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bin"]
bin = ["clap", "num-traits"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
rpaheui = { path = "../rpaheui", features = ["clap"] }
