[package]
name = "aheui"
description = "Aheui interpreter"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bin"]
bin = ["clap", "num-traits"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
rpaheui = { path = "../rpaheui", version = "0.0.1", features = ["clap"] }
